# SocoMovies

./: README.md  docker-compose.yml  justfile
soco-backend-service/: .env.template  Dockerfile  pyproject.toml  pytest.ini
soco-backend-service/backend/: settings.py  urls.py
soco-backend-service/movies/: admin.py  models.py  serializers.py  views.py
soco-backend-service/movies/management/commands/: init_db.py
soco-backend-service/movies/migrations/: 0001_initial.py  0002_remove_actor_name_remove_review_comment_and_more.py
soco-backend-service/tests/: test_movie.py  test_review.py
web-service/: .prettierrc  Dockerfile  package-lock.json  package.json  vite.config.js
web-service/src/: App.vue  main.js
web-service/src/components/: CreateReviewDialogComponent.vue  Header.vue  MovieCardGenericComponent.vue  ReviewDialogComponent.vue  UpdateMovieDialogComponent.vue
web-service/src/router/: index.js
web-service/src/views/: HomePage.vue  MovieDetailPage.vue  MovieListPage.vue
